[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsrife"
version = "3.1.0"
description = "RIFE function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["RIFE", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy",
  "requests",
  "tensorrt>=8.5.2.2",
  "torch>=1.13.0",
  "torch-tensorrt-fx-only>=1.3.0",
  "tqdm",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-rife"
"Bug Tracker" = "https://github.com/HolyWu/vs-rife/issues"
