[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsrife"
version = "4.0.0"
description = "RIFE function for VapourSynth"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["RIFE", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "tensorrt>=8.6.1",
  "torch>=2.0.1",
  "torch-tensorrt-fx-only>=1.4.0",
  "tqdm>=4.66.1",
  "VapourSynth>=62"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-rife"
"Bug Tracker" = "https://github.com/HolyWu/vs-rife/issues"
