[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsrife"
version = "4.2.0"
description = "RIFE function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "HolyWu", email = "holywu@gmail.com" },
]
keywords = [
  "PyTorch",
  "RIFE",
  "TensorRT",
  "VapourSynth",
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "numpy",
  "requests",
  "torch>=2.4.0.dev",
  "tqdm",
  "VapourSynth>=66",
]

[project.urls]
Homepage = "https://github.com/HolyWu/vs-rife"
Issues = "https://github.com/HolyWu/vs-rife/issues"
