[metadata]
name = vsrife
version = 2.0.0
author = HolyWu
description = RIFE function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-rife
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    torch>=1.9.0
    VapourSynth>=55

[options.package_data]
* = *.pkl
